# simplex-mariadb

./: .gitmodules  CMakeLists.txt  README.md
cpp-wrapper/: CMakeLists.txt  MariaDB.cpp  MariaDB.hpp  MariaDBStatement.cpp  main.cpp
